--- a/backend/package.json
+++ b/backend/package.json
@@ -8,13 +8,17 @@
     "dev": "node --watch server.js",
     "start": "node server.js"
   },
-  "keywords": ["travel", "backend", "express"],
+  "keywords": [
+    "travel",
+    "backend",
+    "express"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "nodemailer": "^6.9.7"
+    "express": "^4.18.2",
+    "resend": "^3.5.0"
   }
 }
